--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <input type="number" id="intbnkname">
 
     <h2 class="out"></h2>
+    <script src="data/Banks.js"></script>
     <script src="data/main.js"></script>
 </body>
 </html>
