--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <input type="number" id="intbnkname">
 
-    <h2 class="out"></h2>
+<body>
+    <!-- <input type="number" id="intbnkname"> -->
+
+    <!-- <h2 class="out"></h2> -->
+
+    <div class="card">
+        <div class="name out">
+            بلو بانک
+        </div>
+        <div class="number">
+            <input id="intbnkname" value="62198619">
+        </div>
+    </div>
+
+
+
     <script src="data/Banks.js"></script>
     <script src="data/main.js"></script>
 </body>
+
 </html>
